--- a/src/main/resources/com/tesla/fxml/birds-eye-forecast.fxml
+++ b/src/main/resources/com/tesla/fxml/birds-eye-forecast.fxml
@@ -1,11 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="362.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tesla.controllers.BirdsEyeForecastsController">
-   <children>
-      <Button layoutX="284.0" layoutY="169.0" mnemonicParsing="false" onAction="#switchToPrimary" text="Go Back" />
-   </children>
-</AnchorPane>
+<VBox alignment="CENTER" maxHeight="362.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tesla.controllers.BirdsEyeForecastsController">
+  <padding>
+    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+  </padding>
+  <Label fx:id="datasetName" alignment="CENTER" prefHeight="95.0" prefWidth="273.0" text="Forecasts For Dataset 1" textAlignment="CENTER" />
+  <TableView fx:id="MethodsTable" prefHeight="212.0" prefWidth="600.0">
+    <columns>
+      <TableColumn fx:id="methodName" prefWidth="250.0" text="Method Name" />
+      <TableColumn fx:id="minSales" prefWidth="135.0" text="Min Forecasted Sales" />
+      <TableColumn fx:id="maxSales" prefWidth="135.0" text="Max Forecasted Sales" />
+      <TableColumn fx:id="mse" minWidth="0.0" prefWidth="97.0" text="MSE" />
+    </columns>
+  </TableView>
+  <VBox prefHeight="200.0" prefWidth="100.0">
+    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+      <Label fx:id="mostAccurateMethodLabel" prefHeight="60.0" prefWidth="494.0" text="The most accurate forecast method for this dataset is Exponential Smoothing. But you can also get forecasted datasets in any method." wrapText="true" />
+    </HBox>
+    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+      <Button mnemonicParsing="false" onAction="#switchToPrimary" text="Go Back">
+        <HBox.margin>
+          <Insets right="5.0" />
+        </HBox.margin>
+      </Button>
+      <Button mnemonicParsing="false" onAction="#getForecastedDataset" text="Get Forecasted Dataset">
+        <HBox.margin>
+          <Insets />
+        </HBox.margin>
+      </Button>
+    </HBox>
+  </VBox>
+</VBox>
