--- a/src/main/resources/com/tesla/fxml/birds-eye-forecast.fxml
+++ b/src/main/resources/com/tesla/fxml/birds-eye-forecast.fxml
@@ -8,12 +8,12 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="362.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tesla.controllers.BirdsEyeForecastsController">
+<VBox alignment="CENTER" maxHeight="362.0" maxWidth="620.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tesla.controllers.BirdsEyeForecastsController">
   <padding>
     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
   </padding>
   <Label fx:id="datasetName" alignment="CENTER" prefHeight="95.0" prefWidth="273.0" text="Forecasts For Dataset 1" textAlignment="CENTER" />
-  <TableView fx:id="MethodsTable" prefHeight="212.0" prefWidth="600.0" maxWidth="600.0">
+  <TableView fx:id="MethodsTable" maxWidth="600.0" prefHeight="212.0" prefWidth="600.0">
     <columns>
       <TableColumn fx:id="methodName" prefWidth="230.0" text="Method Name" />
       <TableColumn fx:id="minSales" prefWidth="135.0" text="Min Forecasted Sales" />
@@ -21,7 +21,7 @@
       <TableColumn fx:id="mse" minWidth="0.0" prefWidth="97.0" text="MSE" />
     </columns>
   </TableView>
-  <VBox prefHeight="200.0" prefWidth="100.0">
+  <VBox maxHeight="200.0" maxWidth="500.0" prefHeight="200.0" prefWidth="100.0">
     <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
       <Label fx:id="mostAccurateMethodLabel" prefHeight="60.0" prefWidth="494.0" text="The most accurate forecast method for this dataset is Exponential Smoothing. But you can also get forecasted datasets in any method." wrapText="true" />
     </HBox>
