--- a/src/main/resources/com/tesla/fxml/view-update.fxml
+++ b/src/main/resources/com/tesla/fxml/view-update.fxml
@@ -8,12 +8,12 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" prefHeight="420.0" prefWidth="626.0" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tesla.controllers.ViewUpdateController">
+<VBox alignment="TOP_CENTER" maxHeight="420.0" maxWidth="626.0" prefHeight="420.0" prefWidth="626.0" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tesla.controllers.ViewUpdateController">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
    <Label fx:id="datasetName" alignment="CENTER" prefHeight="0.0" prefWidth="369.0" text="Dataset 1" textAlignment="CENTER" />
-   <HBox alignment="CENTER" prefHeight="20.0" prefWidth="586.0">
+   <HBox alignment="CENTER" maxHeight="20.0" maxWidth="586.0" prefHeight="20.0" prefWidth="586.0">
       <VBox.margin>
          <Insets top="-10.0" />
       </VBox.margin>
@@ -39,7 +39,7 @@
       <padding>
          <Insets left="10.0" right="10.0" />
       </padding></Label>
-   <VBox prefHeight="247.0" prefWidth="586.0">
+   <VBox maxHeight="247.0" maxWidth="586.0" prefHeight="247.0" prefWidth="586.0">
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <Label alignment="CENTER" text="Year 1" textAlignment="CENTER" />
       </HBox>
@@ -120,7 +120,7 @@
          <TextField fx:id="dec1" prefHeight="25.0" prefWidth="155.0" promptText="December" />
       </HBox>
    </VBox>
-   <VBox layoutX="30.0" layoutY="169.0" prefHeight="242.0" prefWidth="586.0">
+   <VBox layoutX="30.0" layoutY="169.0" maxHeight="242.0" maxWidth="586.0" prefHeight="242.0" prefWidth="586.0">
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="586.0">
          <Label alignment="CENTER" text="Year 2" textAlignment="CENTER" />
       </HBox>
@@ -201,7 +201,7 @@
          <TextField fx:id="dec2" promptText="December" />
       </HBox>
    </VBox>
-   <HBox alignment="CENTER" prefHeight="59.0" prefWidth="586.0" spacing="10.0">
+   <HBox alignment="CENTER" maxHeight="59.0" maxWidth="586.0" prefHeight="59.0" prefWidth="586.0" spacing="10.0">
       <Button layoutX="260.0" layoutY="11.0" mnemonicParsing="false" onAction="#switchToPrimary" prefHeight="32.0" prefWidth="87.0" text="Go Back" />
       <Button mnemonicParsing="false" onAction="#printReversed" text="Print in Reversed Order" />
       <Button mnemonicParsing="false" onAction="#updateDataset" prefHeight="32.0" prefWidth="87.0" text="Update" />
